another attempt to fix gap
git-svn-id: http://svn.dojotoolkit.org/src@5191 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/TreeDocIcon.css
+++ b/trunk/src/widget/templates/TreeDocIcon.css
@@ -3,27 +3,27 @@
 
 
 /* long vertical line under docIcon, connecting w/ children */
-.TreeStateChildrenYes-ExpandOpen .TreeContent {
+.TreeStateChildrenYes-ExpandOpen .TreeIconContent {
     background-image : url('../templates/images/TreeV3/i_long.gif');
     background-repeat : no-repeat;
     background-position: 0px 9px;
 }
 
 /* close has higher priority */
-.TreeStateChildrenYes-ExpandClosed .TreeContent {
+.TreeStateChildrenYes-ExpandClosed .TreeIconContent {
     background-image : url();
 }
 
 /* higher priotity: same length and appear after background-definition */
-.TreeStateChildrenNo-ExpandLeaf .TreeContent {
+.TreeStateChildrenNo-ExpandLeaf .TreeIconContent {
     background-image : url();
 }
 
-.TreeStateChildrenNo-ExpandClosed .TreeContent {
+.TreeStateChildrenNo-ExpandClosed .TreeIconContent {
     background-image : url();
 }
 
-.TreeStateChildrenNo-ExpandOpen .TreeContent {
+.TreeStateChildrenNo-ExpandOpen .TreeIconContent {
     background-image : url();
 }
 
@@ -50,17 +50,7 @@
     background-repeat : no-repeat;
 }
 
-/* add padding to make some space in content for docIcon */
-.TreeContent {
-    padding-left: 18px;
+.TreeIconContent {
+    margin-left:18px;
 }
 
-.TreeIEContent{
-    padding-left: 0px;
-}
-
-/* IE workaround */
-div.TreeIEContent {
-    padding-left: 0px;
-    margin-left: 0px;
-}
